--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
+    "bootstrap": "^4.1.3",
     "canvasjs": "^1.8.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "npm": "^6.4.1",
+    "popper.js": "^1.14.5",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "zone.js": "^0.8.26"
